# plain-text-editor

./: AUTHORS  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  plain-text-editor-efektivus.desktop  plain-text-editor-folhium.desktop
translations/: plain-text-editor-folhium_pt_BR.ts
